--- a/assets/css/navbar.css
+++ b/assets/css/navbar.css
@@ -18,6 +18,15 @@ body {
   .offcanvas {
     width: 75% !important;
   }
+
+  .dropdown {
+    display: none !important;
+  }
+
+  .dropdown-mobile {
+    display: block !important;
+  }
+
 }
 
 .letter-spacing-1 {
@@ -33,14 +42,24 @@ body {
 }
 
 .offcanvas-body ul a {
-  display: block; /* Makes the entire <a> area clickable */
-  color: #000; /* Initial text color */
+  display: block;
+  /* Makes the entire <a> area clickable */
+  color: #000;
+  /* Initial text color */
   text-decoration: none;
-  padding: 0.5rem; /* Adjust as needed for padding around text */
-  transition: background-color 0.3s ease, color 0.3s ease; /* Smooth transition for background and text color */
+  padding: 0.5rem;
+  /* Adjust as needed for padding around text */
+  transition: background-color 0.3s ease, color 0.3s ease;
+  /* Smooth transition for background and text color */
 }
 
 .offcanvas-body ul a:hover {
   background-color: #000 !important;
-  color: white !important; /* Changes text color on hover */
+  color: white !important;
+  /* Changes text color on hover */
 }
+
+.dropdown .btn {
+  background: transparent !important;
+}
+
