Updated frontend for admin side

--- a/assets/css/admin.css
+++ b/assets/css/admin.css
@@ -45,9 +45,9 @@ body {
 }
 
 /* NOTIFICATION */
-#notification-modal .modal-header, .modal-body {
+/* #notification-modal .modal-header, .modal-body {
     background-color: #D2D0D0EB;
-}
+} */
 
 @media (max-width: 575px) {
     #notification-modal {
@@ -151,7 +151,7 @@ body {
 }
 
 /* EDIT & ADD RETURNED ITEM */
-#edit-returned .form-control {
+/* #edit-returned .form-control {
     background-color: #F6F6F6;
     border-radius: 8px;
     box-shadow: 0 3px 2px rgba(0, 0, 0, 0.2);
@@ -169,7 +169,7 @@ body {
 
 #add-return .custom-modal .modal-body {
     background-color: #FFFFFF;
-}
+} */
 
 /* RESTOCK */
 #restock .modal-content {
