revised navbar and sidebar for admin side

--- a/assets/css/admin.css
+++ b/assets/css/admin.css
@@ -1,53 +1,114 @@
 /* CSS FOR ADMIN SIDE! */
-
 body {
     font-family: "Inter", sans-serif;
+    overflow: hidden;
 }
 
-/* SIDEBAR */
-.offcanvas-body, .offcanvas-header {
-    background-color: black;
+
+/* FIXED NAVBAR */
+#main-header {
+    background: linear-gradient(90deg, #ae8625, #f7ef8a, #d2ac47, #edc967);
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    z-index: 1;
 }
 
-.offcanvas-body ul {
+#dropdownMenuButton::after {
+    display: none;
+}
+
+
+/* FIXED SIDEBAR */
+#sidebar {
+    min-height: 100vh;
+    position: fixed;
+    top: 4.313rem;
+    bottom: 0;
+    width: 250px;
+    z-index: 1000;
+    height: calc(100vh - 4.313rem);
+    overflow-y: auto;
+    transition: transform 0.3s ease;
+}
+
+#sidebar.collapsing {
+    transform: translateX(-100%);
+}
+
+#sidebar.show {
+    transform: translateX(0);
+}
+
+#sidebar ul {
     border: none;
 }
 
-.offcanvas-body ul li {
+#sidebar ul li {
     background-color: white;
     margin-top: 15px;
     margin-bottom: 15px;
-    border-radius: 8px;
+    border-radius: 5px;
 }
 
-.offcanvas-body ul li a {
+#sidebar ul li a {
     text-decoration: none;
     font-size: 25px;
     font-weight: bold;
 }
 
-.offcanvas-body .sidebar-item {
+#sidebar .sidebar-item {
     transition: background-color 0.3s ease, transform 0.2s ease;
 }
 
-.offcanvas-body .sidebar-item:hover {
+#sidebar .sidebar-item:hover {
     background-color: rgba(207, 207, 207, 0.9);
 }
 
-.offcanvas .dropdown-item {
+#sidebar .dropdown-item {
     font-size: 1rem !important;
     font-weight: normal !important;
     transition: background-color 0.3s ease, transform 0.2s ease;
 }
 
-.offcanvas .dropdown-item:hover {
+#sidebar .dropdown-item:hover {
     background-color: rgba(0, 0, 0, 0.2);
 }
 
+
+/* MAIN CONTENT WRAPPER */
+#content-wrapper {
+    top: 4.313rem;
+    position: relative;
+    margin-left: 250px;
+    width: calc(100% - 250px);
+    height: calc(100vh - 4.313rem);
+    overflow-y: auto;
+    transition: margin-left 0.3s ease;
+}
+
+@media (max-width: 768px) {
+    #sidebar {
+        position: absolute;
+        top: 4.313rem;
+        left: 0;
+        bottom: 0;
+        height: 100vh;
+        z-index: 10;
+    }
+
+    #content-wrapper {
+        margin-left: 0;
+        width: 100%;
+    }
+}
+
+
 /* NOTIFICATION */
-/* #notification-modal .modal-header, .modal-body {
-    background-color: #D2D0D0EB;
-} */
+#notification-modal {
+    top: 3rem;
+}
 
 @media (max-width: 575px) {
     #notification-modal {
@@ -60,6 +121,7 @@ body {
         font-size: .9rem;
     }
 }
+
 
 /* DASHBOARD */
 #dashboard .card {
@@ -87,6 +149,7 @@ body {
     }
 }
 
+
 /* INVENTORY */
 #inventory .card {
     background-color: #F6F6F6 !important;
@@ -102,6 +165,7 @@ body {
     box-shadow: 0 3px 2px rgba(0, 0, 0, 0.2);
 }
 
+
 /* PRODUCT DETAILS */
 #product-details .content .btn {
     border-radius: 8px;
@@ -110,6 +174,7 @@ body {
 #product-details .form-control {
     border-radius: 8px;
 }
+
 
 /* EDIT & ADD PRODUCT DETAILS */
 #edit-details .form-control {
@@ -132,6 +197,7 @@ body {
     background-color: #FFFFFF;
 }
 
+
 /* EDIT MONTHLY QUOTA */
 #monthly-quota .form-control {
     background-color: #F6F6F6;
@@ -150,26 +216,6 @@ body {
     }
 }
 
-/* EDIT & ADD RETURNED ITEM */
-/* #edit-returned .form-control {
-    background-color: #F6F6F6;
-    border-radius: 8px;
-    box-shadow: 0 3px 2px rgba(0, 0, 0, 0.2);
-}
-
-#edit-returned .custom-modal .modal-body {
-    background-color: #FFFFFF;
-}
-
-#add-return .form-control {
-    background-color: #F6F6F6;
-    border-radius: 8px;
-    box-shadow: 0 3px 2px rgba(0, 0, 0, 0.2);
-}
-
-#add-return .custom-modal .modal-body {
-    background-color: #FFFFFF;
-} */
 
 /* RESTOCK */
 #restock .modal-content {
@@ -191,10 +237,12 @@ body {
     }
 }
 
+
 /* ACCOUNTS */
 #customer-modal .modal-body {
     background-color: #FFFFFF;
 }
+
 
 /* REPORTS */
 #reports .card {
@@ -205,10 +253,12 @@ body {
     display: flex;
 }
 
+
 /* INVENTORY REPORT */
 #inventory-report .form-select {
     border-radius: 10px;
 }
+
 
 /* FOR TABLES ONLY */
 .table {
